[package]
name = "trophy_lodge"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
convert_case = "0.6.0"
strum = "0.26.1"
strum_macros = "0.26.1"
rand = "0.8.5"
serde_json = "1.0.113"
proc_mem = "0.1.6"
chrono = "0.4.33"
windows = { version = "0.52.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
]}
csv = "1.3.0"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
